<resources>

    <string name="app_name">My Music</string>
    <string name="now_playing_activity_name">Now Playing</string>
    <string name="song_played_by">by : </string>
    <string name="library_text_view_text">Library</string>
    <!-- Main Activity -->
    <string name="photo_content_type_desc">picture by : Clem Onojeghuo on Unsplash</string>
    <!-- Song ArrayList View -->
    <string name="play_text_view_text">Play</string>
    <!-- Now Playing Activity -->
    <string name="now_playing_content_desc_picture">picture by : Simon Noh on Unsplash </string>
    <string name="now_playing_text_view">Now Playing</string>
    <string name="starting_time">0:00</string>
    <string name="now_playing_bar_progress_content_description">Progress Bar Image</string>
    <string name="now_playing_pause_and_play_button">Play and Pause Button</string>


    <!-- Main Activity Song Names -->

    <string name="love_you">Love You</string>
    <string name="got_this">Got This!</string>
    <string name="the_way_we_do_it">The Way We Do It</string>
    <string name="lets_bring_it_down">Lets Bring It Down</string>
    <string name="more_of_it">More Of It</string>
    <string name="another_one">Another One</string>
    <string name="play_by_the_rules">Play By The Rules</string>

    <!-- Main Activity Song Artist -->
    <string name="brian_alm">Brian Almanzar</string>
    <string name="ryan_alm">Ryan Almanzar</string>
    <string name="jhombi">Jhombi Jhombi</string>
    <string name="super_s">Super Stars</string>
    <string name="jhonny_jack">Jhonny Jack</string>
    <string name="great_band">Great Band</string>

</resources>
