<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background_color"
    android:orientation="vertical"
    tools:context=".NowPlayingActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/now_playing_content_desc_picture"
        android:src="@drawable/now_playing_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_text_color"
        android:layout_gravity="center"
        android:text="@string/now_playing_text_view"
        android:textSize="@dimen/now_playing_text_view_size"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top_20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/now_playing_song_name"
        android:textSize="@dimen/now_playing_song_name_text_size"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white_text_color"
        android:layout_marginTop="@dimen/margin_top_20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/now_playing_artist"
        android:layout_gravity="center"
        android:textColor="@color/white_text_color"
        android:textSize="@dimen/now_playing_artist_text_size"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_time"
            android:textSize="@dimen/now_playing_text_view_time_text_size"
            android:textColor="@color/white_text_color"/>

        <ImageView
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/music_bar"
            android:paddingTop="10dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/now_playing_bar_progress_content_description"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_time"
            android:gravity="end"
            android:textSize="@dimen/now_playing_text_view_time_text_size"
            android:textColor="@color/white_text_color"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="0"
        android:layout_gravity="center"
        android:id="@+id/now_playing_play_pause_button"
        android:src="@drawable/pause_button"
        android:paddingTop="45dp"
        android:contentDescription="@string/now_playing_pause_and_play_button"/>

</LinearLayout>